--- a/org.osgi.test.cases.webcontainer/build.xml
+++ b/org.osgi.test.cases.webcontainer/build.xml
@@ -24,7 +24,7 @@
 		<echo>build test war files</echo>
 	</target>
 	
-	<target name="build-wmwar" depends="build-wmwar1, build-wmwar2, build-wmwar3, build-wmwar4, build-wmwar5">
+	<target name="build-wmwar" depends="build-wmwar1, build-wmwar2, build-wmwar3, build-wmwar4, build-wmwar5, build-wm2war5, build-wm3war5">
 		<echo>build test war files with pre-specified manifest</echo>
 	</target>
 	
@@ -140,6 +140,30 @@
 	<target name="build-wmwar5" depends="compile">
 		<echo>Building wmtw5.war file</echo>	
 		<war destfile="resources/tw5/wmtw5.war" webxml="resources/tw5/WebContent/WEB-INF/web.xml" manifest="resources/tw5/WebContent/META-INF/MANIFEST.MF">
+			<fileset dir="resources/tw5/WebContent/"/>
+			<classes dir="src/">
+				<include name="org/osgi/test/cases/webcontainer/tw5/**"/>
+				<include name="org/osgi/test/cases/webcontainer/util/**"/>
+			</classes>
+		</war>
+	</target>
+	
+	<!-- same as tw5.war file but with pre-specified manifest - wm2tw5.war -->
+	<target name="build-wm2war5" depends="compile">
+		<echo>Building wm2tw5.war file</echo>	
+		<war destfile="resources/tw5/wm2tw5.war" webxml="resources/tw5/WebContent/WEB-INF/web.xml" manifest="resources/tw5/manifest/MANIFEST2.MF">
+			<fileset dir="resources/tw5/WebContent/"/>
+			<classes dir="src/">
+				<include name="org/osgi/test/cases/webcontainer/tw5/**"/>
+				<include name="org/osgi/test/cases/webcontainer/util/**"/>
+			</classes>
+		</war>
+	</target>
+					
+	<!-- same as tw5.war file but with pre-specified manifest - wm3tw5.war -->
+	<target name="build-wm3war5" depends="compile">
+		<echo>Building wm3tw5.war file</echo>	
+		<war destfile="resources/tw5/wm3tw5.war" webxml="resources/tw5/WebContent/WEB-INF/web.xml" manifest="resources/tw5/manifest/MANIFEST3.MF">
 			<fileset dir="resources/tw5/WebContent/"/>
 			<classes dir="src/">
 				<include name="org/osgi/test/cases/webcontainer/tw5/**"/>
