--- a/org.osgi.test.cases.monitor/.classpath
+++ b/org.osgi.test.cases.monitor/.classpath
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.1.0.jar"/>
-	<classpathentry kind="lib" path="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar" sourcepath="/ee.foundation"/>
-	<classpathentry kind="lib" path="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar" sourcepath="/org.osgi.test.cases/src"/>
+	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
