all tests are now working

--- a/org.osgi.test.cases.framework.div/resources/div.tb8/bundle.properties
+++ b/org.osgi.test.cases.framework.div/resources/div.tb8/bundle.properties
@@ -1,4 +1,4 @@
-bundlename= test.cases.framework.div.tb8
+bundlename= ${p}.tb8
 bundlevendor= CESAR.ORG
 bundlecategory= Should contain the bundle category for tb8
 bundlecopyright= Should contain the bundle copyright for tb8
