--- a/org.osgi.test.cases.packageadmin/.project
+++ b/org.osgi.test.cases.packageadmin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osgi.test.cases.packageadmin.tc1</name>
+	<name>org.osgi.test.cases.packageadmin</name>
 	<comment></comment>
 	<projects>
 	</projects>
