--- a/org.osgi.test.cases.condpermadmin/.project
+++ b/org.osgi.test.cases.condpermadmin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osgi.test.cases.permissionadmin.conditional</name>
+	<name>org.osgi.test.cases.condpermadmin</name>
 	<comment></comment>
 	<projects>
 	</projects>
