--- a/org.osgi.test.cases.webcontainer/build.xml
+++ b/org.osgi.test.cases.webcontainer/build.xml
@@ -187,7 +187,7 @@
 	
 	<!-- build the simple jar to test Bundle-Classpath header -->
 	<target name="build-simplejar" depends="compile">
-	    <echo>Building simple jar file</echo>
+	    <echo>Building org.osgi.test.cases.webcontainer.simple.jar file</echo>
 	    <jar destfile="generated/org.osgi.test.cases.webcontainer.simple.jar"
 		     basedir="src/"
 		     includes="org/osgi/test/cases/webcontainer/simple/**"
