--- a/org.osgi.service.remoteserviceadmin/.project
+++ b/org.osgi.service.remoteserviceadmin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osgi.service.remoteserviceadmin</name>
+	<name>org.osgi.service.remoteservices</name>
 	<comment></comment>
 	<projects>
 	</projects>
