separate service.jndi into its own project rename Constants to JndiConstants to have a more unique name to avoid ambiguity make JndiConstants a non-instantiable class instead of an interface (best practice) rename member of JndiConstants to better match their values

--- a/org.osgi.service.jndi/.project
+++ b/org.osgi.service.jndi/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osgi.service.template</name>
+	<name>org.osgi.service.jndi</name>
 	<comment></comment>
 	<projects>
 	</projects>
