--- a/cnf/.project
+++ b/cnf/.project
@@ -4,8 +4,14 @@
 	<comment></comment>
 	<projects>
 	</projects>
-	<buildSpec>
-	</buildSpec>
-	<natures>
-	</natures>
+        <buildSpec>
+                <buildCommand>
+                        <name>org.eclipse.jdt.core.javabuilder</name>
+                        <arguments>
+                        </arguments>
+                </buildCommand>
+        </buildSpec>
+        <natures>
+                <nature>org.eclipse.jdt.core.javanature</nature>
+        </natures>
 </projectDescription>
