--- a/osgi.ct/build.xml
+++ b/osgi.ct/build.xml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="project" default="publish"> 
-	<import file="../cnf/build.xml"/>
-	
-	<target name="runtests" depends="publish">
+<project name="project" default="publish">
+	<import file="../cnf/build.xml" />
+
+	<target name="runtests">
+      <!--  <antcall target="-runtest">
+            <param name="test-name" value="osgi.core.tests" />
+        </antcall> -->
+
+      <antcall target="-runtest">
+            <param name="test-name" value="osgi.cmpn.tests" />
+        </antcall>
 	</target>
-		
+
+	<target name="-runtest" depends="publish">
+		<property name="prefix" value="${target}/${test-name}"/>
+		<delete dir="${prefix}"/>
+		<mkdir dir="${prefix}"/>
+		<unzip dest="${prefix}" src="${prefix}.jar"/>
+
+        <java dir="${prefix}"  jar="${prefix}/jar/bnd.jar" fork="true">
+            <arg value="-exceptions"/>
+            <arg value="runtests"/>
+            <arg value="-title"/>
+            <arg value="${test-name}"/>
+        </java>
+	</target>
 </project>
