Added a 64 bit shared lib

--- a/org.osgi.test.cases.framework/resources/div.tb2/linux_x86-64/Makefile
+++ b/org.osgi.test.cases.framework/resources/div.tb2/linux_x86-64/Makefile
@@ -1,7 +1,7 @@
 all: libNative.so
 
 libNative.so: ../NativeCode.h NativeCodeI.c
-	gcc -m32 -I /usr/jdk118/include/ -I $(EJDK)/include/linux/ NativeCodeI.c \
+	gcc -m64 -I /usr/local/lib/jdk1.6.0_11/include -I /usr/local/lib/jdk1.6.0_11/include/linux/ NativeCodeI.c \
 	-shared -o libNative.so
 
 clean:
