Now allow unzipping multiple jar files for the tests. This is needed to get the RIs from osgi.ri and now with the correct file names

--- a/osgi.ct/build.xml
+++ b/osgi.ct/build.xml
@@ -10,7 +10,7 @@
 
 		<antcall target="-runtest">
 			<param name="test-name" value="osgi.cmpn.tests" />
-			<param name="jars" value="${workspace}/osgi.ri/generated/osgi.core.impls.jar,${workspace}/osgi.ri/generated/osgi.core.impls.jar" />
+			<param name="jars" value="../osgi.ri/generated/osgi.core.impls.jar,../osgi.ri/generated/osgi.cmpn.impls.jar" />
 		</antcall>
 	</target>
 
